force-app/main/default/objects/FRA_SurveyInvitationConfiguration__mdt/FRA_SurveyInvitationConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>FRA Survey Invitation Configuration</label>
    <pluralLabel>FRA Surveys Invitations Configuration</pluralLabel>
</CustomObject>