force-app/main/default/objects/FRA_SurveyInvitationConfiguration__mdt/fields/FRA_CommunityId__c.field-meta.xml
<CustomField>
    <fullName>FRA_CommunityId__c</fullName>
    <label>CommunityId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>