force-app/main/default/objects/FRA_SurveyInvitationConfiguration__mdt/fields/FRA_CommunityURL__c.field-meta.xml
<CustomField>
    <fullName>FRA_CommunityURL__c</fullName>
    <label>CommunityURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>