force-app/main/default/objects/FRA_SurveyInvitationConfiguration__mdt/fields/FRA_SurveyId__c.field-meta.xml
<CustomField>
    <fullName>FRA_SurveyId__c</fullName>
    <label>SurveyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>